Fix button alignment in device manager

--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ p {
   margin: 5px 5px 0 0;
 }
 
+/* Align add/remove buttons in form rows with input fields */
+.form-row > button {
+  align-self: flex-end;
+  margin: 5px 0 0 0;
+}
+
 /* Small wrapper to show labels even when a value is present */
 .field-with-label {
   display: flex;
